--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '11'
       - uses: gradle/gradle-build-action@v2
         with:
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '11'
       - uses: gradle/gradle-build-action@v2
         with:
@@ -76,7 +76,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '11'
       - uses: nttld/setup-ndk@v1
         id: setup-ndk
@@ -127,7 +127,7 @@ jobs:
        - uses: actions/checkout@v3
        - uses: actions/setup-java@v3
          with:
-           distribution: 'adopt'
+           distribution: 'zulu'
            java-version: '11'
        # Runs a set of commands using the runners shell
        - shell: bash
@@ -168,7 +168,7 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
       - uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '11'
       - uses: gradle/gradle-build-action@v2
         with:
