--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - shell: bash
         run: |
           ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:awtTest
@@ -49,6 +50,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - shell: bash
         run: |
           ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:iosX64Test
@@ -70,6 +72,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
@@ -113,6 +116,7 @@ jobs:
          with:
            distribution: 'zulu'
            java-version: '11'
+       - uses: gradle/gradle-build-action@v2
        # Runs a set of commands using the runners shell
        - shell: bash
          run: |
@@ -150,6 +154,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - shell: bash
         run: |
           ./gradlew --stacktrace --info :skiko:awtTest
