--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+      - uses: gradle/gradle-build-action@v2
       - name: Build docs
         run: bash -c 'JAVA_OPTS="-Xmx4g" ./gradlew --no-daemon  -Pskiko.native.enabled=true -Pskiko.wasm.enabled=true -Pskiko.android.enabled=true :skiko:dokkaHtml'
       - name: Publish documentation
